--- a/index.html
+++ b/index.html
@@ -55,38 +55,18 @@
   <!-- About -->
   <div id="about">
     <div class="about_title">
-      <h2>Who am i?</h2>
+      <div class="profile_img"></div>
+      <h2>@개발자 정승현</h2>
     </div>
     <div class="about_content">
-      <section class="introduce">
-        <ul>
-          <li>이름: 정승현</li>
-          <li></li>
-        </ul>
-      </section>
-      <section class="one">
-        <h2>코딩을 좋아하는 사람</h2>
-        <div class="one_content">
-          <p>누구보다 코딩을 좋아한다고 자부합니다!</br>
-            어렸을 적 부터 개발자가 되는 것이 꿈이어서 간단한 게임을 개발해 보았고</br>
-            무언가 코드를 짜고 있을 때 가장 집중할 수 있습니다.</br>
-            그 결과물에 짜릿함과 행복감을 느끼고 있습니다!.
-          </p>
-        </div>
-      </section>
-      <section class="two">
-        <h2>코딩을 좋아하는 사람</h2>
-        <div class="one_content">
-          <p>누구보다 코딩을 좋아한다고 자부합니다!</br>
-            어렸을 적 부터 개발자가 되는 것이 꿈이어서 간단한 게임을 개발해 보았고</br>
-            무언가 코드를 짜고 있을 때 가장 집중할 수 있습니다.</br>
-            그 결과물에 짜릿함과 행복감을 느끼고 있습니다!.
-          </p>
-      </section>
-
-    </div>
+      <p>저는 대학 재학생 정승현입니다.</br>
+      프로그램을 짜고 결과물을 확인하는 것을 즐깁니다!</p>
   </div>
+</div>
 
+<div id="memories">
+
+</div>
 
 
   <footer id="footer">
