--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title>JSP WEB PAGE</title>
+  <title>정승현의 공간</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
   <link rel="stylesheet" href="./assets/css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,6 +27,7 @@
           <li><a href="#intro" class="scroll_move">Welcome</a></li>
         </ul>
       </div>
+      
       <div class="header_bar">
         <div class="bar">
           <div class="bar1"></div>
@@ -54,20 +55,56 @@
 
   <!-- About -->
   <div id="about">
-    <div class="about_title">
+    <div class="about_profile">
       <div class="profile_img"></div>
       <h2>@개발자 정승현</h2>
     </div>
-    <div class="about_content">
-      <p>저는 대학 재학생 정승현입니다.</br>
-      프로그램을 짜고 결과물을 확인하는 것을 즐깁니다!</p>
+    <div class="about_title">
+      <p>안녕하세요!</br>
+        저는 다양한 게임과</br>
+        앱, 웹등을 만들고 있는</br>
+      개발자입니다.</p>
+  </div>
+  <div class="about_text">
+    <p class="about_text_item">
+      저는 소프트웨어응용학부 2학년에 재학중인 정승현입니다.</br>
+      컴퓨터로 무언가를 배우고 만드는 것을 좋아합니다.
+    </p>
+    <p class="about_text_item">
+      다양한 시도를 해보고 있습니다.</br>
+      유니티를 시작으로 게임 개발부터</br>
+      이 사이트를 시작으로 웹에 대한 공부를 시작하였고</br>
+      다양한 언어와 최신 기술에 관심을 가지고 있습니다.</br>
+    </p>
+    <p class="about_text_item">
+      저는 코딩하는 것을 좋아합니다.</br>
+      코드를 짜고 있을 때 집중력이 가장 높아지며</br>
+      문제를 해결하는 과정을 즐기고</br>
+      자신이 만들어가는 작품에 대한 자부십을 가지고 있습니다.</br>
+    </p>
+    <p class="about_text_item">
+      프로그래밍 하는 것이 제가 좋아하는 일이며</br>
+      프로그래밍 하는 것을 제 직업으로 삼고 싶습니다.</br>
+      좋아하는 것과 잘 하는 것이 일치하는</br>
+      그럼 삶을 살아가고 싶습니다.
+    </p>
   </div>
 </div>
 
 <div id="memories">
-
+추억
 </div>
 
+<div id="learning">
+현재 익히고 있는 것:유니티C#,html,css,javascript</br>
+앞으로의 계획01:현재 만든 사이트 서버 작업</br>
+앞으로의 계획02:kotlin을 통한 안드로이드 앱 개발</br>
+앞으로의 계획03:전역하기....</br>
+해보고 싶은 것01:유니티를 이용한 vr/ar 제작</br>
+해보고 싶은 것02:머신러닝, 딥러닝을 통한 인공지능 제작</br>
+해보고 싶은 것03:파이썬을 활용한 빅데이터 분석</br>
+
+</div>
 
   <footer id="footer">
     <div class="inner">
