--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
           <li><a href="#intro" class="scroll_move">Welcome</a></li>
         </ul>
       </div>
-      
+
       <div class="header_bar">
         <div class="bar">
           <div class="bar1"></div>
-          <div class="bar1"></div>
-          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
         </div>
 
         <ul class="bar_menu">
@@ -72,15 +72,15 @@
     </p>
     <p class="about_text_item">
       다양한 시도를 해보고 있습니다.</br>
-      유니티를 시작으로 게임 개발부터</br>
-      이 사이트를 시작으로 웹에 대한 공부를 시작하였고</br>
+      유니티를 시작으로 게임 개발부터 시작하였으며</br>
+      이 사이트를 기반으로 웹에 대한 공부를 시작하였습니다.</br>
       다양한 언어와 최신 기술에 관심을 가지고 있습니다.</br>
     </p>
     <p class="about_text_item">
       저는 코딩하는 것을 좋아합니다.</br>
       코드를 짜고 있을 때 집중력이 가장 높아지며</br>
       문제를 해결하는 과정을 즐기고</br>
-      자신이 만들어가는 작품에 대한 자부십을 가지고 있습니다.</br>
+      자신이 만들어가는 작품에 대한 자부심을 가지고 있습니다.</br>
     </p>
     <p class="about_text_item">
       프로그래밍 하는 것이 제가 좋아하는 일이며</br>
