--- a/index.html
+++ b/index.html
@@ -55,56 +55,67 @@
 
   <!-- About -->
   <div id="about">
-    <div class="about_profile">
-      <div class="profile_img"></div>
-      <h2>@개발자 정승현</h2>
+
+      <div class="about_profile">
+        <div class="profile_img"></div>
+        <h2>@개발자 정승현</h2>
+      </div>
+      <div class="about_title">
+        <p>안녕하세요!</br>
+          저는 다양한 게임과</br>
+          앱, 웹등을 공부하고 있는</br>
+          개발자 지망생입니다.</p>
+
     </div>
-    <div class="about_title">
-      <p>안녕하세요!</br>
-        저는 다양한 게임과</br>
-        앱, 웹등을 만들고 있는</br>
-      개발자입니다.</p>
+
+      <div class="about_text">
+        <p class="about_text_item">
+          저는 소프트웨어응용학부 2학년에 재학중인 정승현입니다.</br>
+          컴퓨터로 무언가를 배우고 만드는 것을 좋아합니다.
+        </p>
+        <p class="about_text_item">
+          다양한 시도를 해보고 있습니다.</br>
+          유니티를 시작으로 게임 개발부터 시작하였으며</br>
+          이 사이트를 기반으로 웹에 대한 공부를 시작하였습니다.</br>
+          다양한 언어와 최신 기술에 관심을 가지고 있습니다.</br>
+        </p>
+        <p class="about_text_item">
+          저는 코딩하는 것을 좋아합니다.</br>
+          코드를 짜고 있을 때 집중력이 가장 높아지며</br>
+          문제를 해결하는 과정을 즐기고</br>
+          자신이 만들어가는 작품에 대한 자부심을 가지고 있습니다.</br>
+        </p>
+        <p class="about_text_item">
+          프로그래밍 하는 것이 제가 좋아하는 일이며</br>
+          프로그래밍 하는 것을 제 직업으로 삼고 싶습니다.</br>
+          좋아하는 것과 잘 하는 것이 일치하는</br>
+          그럼 삶을 살아가고 싶습니다.
+        </p>
+      </div>
+
   </div>
-  <div class="about_text">
-    <p class="about_text_item">
-      저는 소프트웨어응용학부 2학년에 재학중인 정승현입니다.</br>
-      컴퓨터로 무언가를 배우고 만드는 것을 좋아합니다.
-    </p>
-    <p class="about_text_item">
-      다양한 시도를 해보고 있습니다.</br>
-      유니티를 시작으로 게임 개발부터 시작하였으며</br>
-      이 사이트를 기반으로 웹에 대한 공부를 시작하였습니다.</br>
-      다양한 언어와 최신 기술에 관심을 가지고 있습니다.</br>
-    </p>
-    <p class="about_text_item">
-      저는 코딩하는 것을 좋아합니다.</br>
-      코드를 짜고 있을 때 집중력이 가장 높아지며</br>
-      문제를 해결하는 과정을 즐기고</br>
-      자신이 만들어가는 작품에 대한 자부심을 가지고 있습니다.</br>
-    </p>
-    <p class="about_text_item">
-      프로그래밍 하는 것이 제가 좋아하는 일이며</br>
-      프로그래밍 하는 것을 제 직업으로 삼고 싶습니다.</br>
-      좋아하는 것과 잘 하는 것이 일치하는</br>
-      그럼 삶을 살아가고 싶습니다.
-    </p>
+
+  <div id="memories">
+    추억
   </div>
-</div>
 
-<div id="memories">
-추억
-</div>
+  <div id="learning">
+    <div class="possible">
+      <img src="./assets/images/cpp.png" alt="c++이미지" style="width:150px; height:100px;" >
+      <img src="./assets/images/java.png" alt="java이미지" style="width:150px; height:100px;" >
+      <img src="./assets/images/html5.png" alt="html5이미지" style="width:350px; height:100px;" >
+      <img src="./assets/images/css3.png" alt="css3이미지" style="width:350px; height:100px;" >
+      <img src="./assets/images/javascript.png" alt="javascript이미지" style="width:150px; height:100px;" >
+    </div>
+    현재 익히고 있는 것:유니티C#,html,css,javascript</br>
+    앞으로의 계획01:현재 만든 사이트 서버 작업</br>
+    앞으로의 계획02:kotlin을 통한 안드로이드 앱 개발</br>
+    앞으로의 계획03:전역하기....</br>
+    해보고 싶은 것01:유니티를 이용한 vr/ar 제작</br>
+    해보고 싶은 것02:머신러닝, 딥러닝을 통한 인공지능 제작</br>
+    해보고 싶은 것03:파이썬을 활용한 빅데이터 분석</br>
 
-<div id="learning">
-현재 익히고 있는 것:유니티C#,html,css,javascript</br>
-앞으로의 계획01:현재 만든 사이트 서버 작업</br>
-앞으로의 계획02:kotlin을 통한 안드로이드 앱 개발</br>
-앞으로의 계획03:전역하기....</br>
-해보고 싶은 것01:유니티를 이용한 vr/ar 제작</br>
-해보고 싶은 것02:머신러닝, 딥러닝을 통한 인공지능 제작</br>
-해보고 싶은 것03:파이썬을 활용한 빅데이터 분석</br>
-
-</div>
+  </div>
 
   <footer id="footer">
     <div class="inner">
